--- a/.env.example
+++ b/.env.example
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
+# DB_CONNECTION=sqlite
+# DB_HOST=tan-falcon-476723.hostingersite.com
 # DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+# DB_DATABASE=u128339578_chirper
+# DB_USERNAME=u128339578_admin
+# DB_PASSWORD=u128339578_C
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
